--- a/src/main/resources/templates/site/discuss-detail.html
+++ b/src/main/resources/templates/site/discuss-detail.html
@@ -1,13 +1,13 @@
+
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="https://static.nowcoder.com/images/logo_87_87.png"/>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-          crossorigin="anonymous">
-    <link rel="stylesheet" th:href="@{css/global.css}"/>
-    <link rel="stylesheet" th:href="@{css/discuss-detail.css}"/>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/css/global.css}"/>
+    <link rel="stylesheet" th:href="@{/css/discuss-detail.css}"/>
     <title>牛客网-帖子详情</title>
 </head>
 <body>
@@ -89,7 +89,11 @@
                         发布于 <b th:text="${#dates.format(post.createTime, 'yyyy-MM-dd HH:mm:ss')}">2019-04-15
                         15:32:18</b>
                         <ul class="d-inline float-right">
-                            <li class="d-inline ml-2"><a href="#" class="text-primary">赞 11</a></li>
+                            <li class="d-inline ml-2">
+                                <a href="javascript:;" th:onclick="|like(this,1,${post.id});|" class="text-primary">
+                                    <b th:text="${likeStatus==1?'已赞':'赞'}">赞</b> <i th:text="${likeCount}">11</i>
+                                </a>
+                            </li>
                             <li class="d-inline ml-2">|</li>
                             <li class="d-inline ml-2"><a href="#replyform" class="text-primary">
                                 回帖 <i th:text="${post.commentCount}">7</i>
@@ -140,7 +144,11 @@
                         <div class="mt-4 text-muted font-size-12">
                             <span>发布于 <b th:text="${#dates.format(cvo.comment.createTime, 'yyyy-MM-dd HH:mm:ss')}">2019-04-15 15:32:18</b></span>
                             <ul class="d-inline float-right">
-                                <li class="d-inline ml-2"><a href="#" class="text-primary">赞(1)</a></li>
+                                <li class="d-inline ml-2">
+                                    <a href="javascript:;" th:onclick="|like(this,2,${cvo.comment.id});|" class="text-primary">
+                                        <b th:text="${cvo.likeStatus==1?'已赞':'赞'}">赞</b> (<i th:text="${cvo.likeCount}">1</i>)
+                                    </a>
+                                </li>
                                 <li class="d-inline ml-2">|</li>
                                 <li class="d-inline ml-2">
                                     <a href="#" class="text-primary">
@@ -169,7 +177,11 @@
 											2019-04-15 15:32:18
 										</span>
                                     <ul class="d-inline float-right">
-                                        <li class="d-inline ml-2"><a href="#" class="text-primary">赞(1)</a></li>
+                                        <li class="d-inline ml-2">
+                                            <a href="javascript:;" th:onclick="|like(this,2,${rvo.reply.id});|" class="text-primary">
+                                                <b th:text="${rvo.likeStatus==1?'已赞':'赞'}">赞</b> (<i th:text="${rvo.likeCount}">1</i>)
+                                            </a>
+                                        </li>
                                         <li class="d-inline ml-2">|</li>
                                         <li class="d-inline ml-2"><a th:href="|#huifu-${rvoStat.count}|"
                                                                      data-toggle="collapse" class="text-primary">回复</a>
@@ -304,10 +316,12 @@
         </div>
     </footer>
 </div>
-<script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
+<!--<script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>-->
+<script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
-<script th:src="@{js/global.js}"></script>
+<script th:src="@{/js/global.js}"></script>
+<script th:src="@{/js/discuss.js}"></script>
 </body>
 </html>
