--- a/src/main/resources/templates/site/discuss-detail.html
+++ b/src/main/resources/templates/site/discuss-detail.html
@@ -80,17 +80,21 @@
             </h6>
             <!-- 作者 -->
             <div class="media pb-3 border-bottom">
-                <a href="profile.html">
+                <a href="profile.html" th:href="@{|/user/profile/${user.id}|}">
                     <img th:src="${user.headerUrl}" class="align-self-start mr-4 rounded-circle user-header" alt="用户头像">
                 </a>
                 <div class="media-body">
-                    <div class="mt-0 text-warning" th:utext="${user.username}">寒江雪</div>
+                    <div class="mt-0 text-warning"  >
+                        <a th:href="@{|/user/profile/${user.id}|}" th:utext="${user.username}">
+                            寒江雪
+                        </a>
+                    </div>
                     <div class="text-muted mt-3">
                         发布于 <b th:text="${#dates.format(post.createTime, 'yyyy-MM-dd HH:mm:ss')}">2019-04-15
                         15:32:18</b>
                         <ul class="d-inline float-right">
                             <li class="d-inline ml-2">
-                                <a href="javascript:;" th:onclick="|like(this,1,${post.id});|" class="text-primary">
+                                <a href="javascript:;" th:onclick="|like(this,1,${post.id},${post.userId});|" class="text-primary">
                                     <b th:text="${likeStatus==1?'已赞':'赞'}">赞</b> <i th:text="${likeCount}">11</i>
                                 </a>
                             </li>
@@ -127,13 +131,18 @@
             <ul class="list-unstyled mt-4">
 
                 <li class="media pb-3 pt-3 mb-3 border-bottom" th:each="cvo:${comments}">
-                    <a href="profile.html">
+                    <a href="profile.html" th:href="@{|/user/profile/${cvo.user.id}|}">
                         <img th:src="${cvo.user.headerUrl}" class="align-self-start mr-4 rounded-circle user-header"
                              alt="用户头像">
                     </a>
                     <div class="media-body">
                         <div class="mt-0">
-                            <span class="font-size-12 text-success" th:utext="${cvo.user.username}">掉脑袋切切</span>
+                            <span class="font-size-12 text-success">
+                                <a th:href="@{|/user/profile/${cvo.user.id}|}" th:utext="${cvo.user.username}">
+                                    掉脑袋切切
+                                </a>
+
+                            </span>
                             <span class="badge badge-secondary float-right floor">
 									<i th:text="${page.offset + cvoStat.count}">1</i>#
 								</span>
@@ -145,7 +154,7 @@
                             <span>发布于 <b th:text="${#dates.format(cvo.comment.createTime, 'yyyy-MM-dd HH:mm:ss')}">2019-04-15 15:32:18</b></span>
                             <ul class="d-inline float-right">
                                 <li class="d-inline ml-2">
-                                    <a href="javascript:;" th:onclick="|like(this,2,${cvo.comment.id});|" class="text-primary">
+                                    <a href="javascript:;" th:onclick="|like(this,2,${cvo.comment.id},${cvo.comment.userId});|" class="text-primary">
                                         <b th:text="${cvo.likeStatus==1?'已赞':'赞'}">赞</b> (<i th:text="${cvo.likeCount}">1</i>)
                                     </a>
                                 </li>
@@ -162,12 +171,12 @@
 
                             <li class="pb-3 pt-3 mb-3 border-bottom" th:each="rvo:${cvo.replies}">
                                 <div>
-										<span th:if="${rvo.target==null}">
-											<b class="text-info" th:text="${rvo.user.username}">寒江雪</b>:&nbsp;&nbsp;
+										<span th:if="${rvo.target==null}" >
+											<a class="text-info"  th:text="${rvo.user.username}" th:href="@{|/user/profile/${rvo.user.id}|}">寒江雪</a>:&nbsp;&nbsp;
 										</span>
                                     <span th:if="${rvo.target!=null}">
-											<i class="text-info" th:text="${rvo.user.username}">Sissi</i> 回复
-											<b class="text-info" th:text="${rvo.target.username}">寒江雪</b>:&nbsp;&nbsp;
+											<a class="text-info" th:text="${rvo.user.username}" th:href="@{|/user/profile/${rvo.user.id}|}">Sissi</a> 回复
+											<a class="text-info" th:text="${rvo.target.username}" th:href="@{|/user/profile/${rvo.user.id}|}">寒江雪</a>:&nbsp;&nbsp;
 										</span>
 
                                     <span th:utext="${rvo.reply.content}">这个是直播时间哈，觉得晚的话可以直接看之前的完整录播的~</span>
@@ -178,7 +187,7 @@
 										</span>
                                     <ul class="d-inline float-right">
                                         <li class="d-inline ml-2">
-                                            <a href="javascript:;" th:onclick="|like(this,2,${rvo.reply.id});|" class="text-primary">
+                                            <a href="javascript:;" th:onclick="|like(this,2,${rvo.reply.id},${rvo.reply.userId});|" class="text-primary">
                                                 <b th:text="${rvo.likeStatus==1?'已赞':'赞'}">赞</b> (<i th:text="${rvo.likeCount}">1</i>)
                                             </a>
                                         </li>
