完成“置顶、加精、删除”模块

--- a/src/main/resources/templates/site/discuss-detail.html
+++ b/src/main/resources/templates/site/discuss-detail.html
@@ -1,11 +1,11 @@
-
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="https://static.nowcoder.com/images/logo_87_87.png"/>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/global.css}"/>
     <link rel="stylesheet" th:href="@{/css/discuss-detail.css}"/>
     <title>牛客网-帖子详情</title>
@@ -73,9 +73,16 @@
                 <img src="http://static.nowcoder.com/images/img/icons/ico-discuss.png"/>
                 <span th:utext="${post.title}">备战春招，面试刷题跟他复习，一个月全搞定！</span>
                 <div class="float-right">
-                    <button type="button" class="btn btn-danger btn-sm">置顶</button>
-                    <button type="button" class="btn btn-danger btn-sm">加精</button>
-                    <button type="button" class="btn btn-danger btn-sm">删除</button>
+                    <input type="hidden" id="postId" th:value="${post.id}">
+                    <button type="button" class="btn btn-danger btn-sm" id="topBtn"
+                            th:disabled="${post.type == 1}" sec:authorize="hasAnyAuthority('moderator')">置顶
+                    </button>
+                    <button type="button" class="btn btn-danger btn-sm" id="wonderfulBtn"
+                            th:disabled="${post.status == 1}" sec:authorize="hasAnyAuthority('moderator')">加精
+                    </button>
+                    <button type="button" class="btn btn-danger btn-sm" id="deleteBtn"
+                            th:disabled="${post.status == 2}" sec:authorize="hasAnyAuthority('admin')">删除
+                    </button>
                 </div>
             </h6>
             <!-- 作者 -->
@@ -84,7 +91,7 @@
                     <img th:src="${user.headerUrl}" class="align-self-start mr-4 rounded-circle user-header" alt="用户头像">
                 </a>
                 <div class="media-body">
-                    <div class="mt-0 text-warning"  >
+                    <div class="mt-0 text-warning">
                         <a th:href="@{|/user/profile/${user.id}|}" th:utext="${user.username}">
                             寒江雪
                         </a>
@@ -94,7 +101,8 @@
                         15:32:18</b>
                         <ul class="d-inline float-right">
                             <li class="d-inline ml-2">
-                                <a href="javascript:;" th:onclick="|like(this,1,${post.id},${post.userId},${post.id});|" class="text-primary">
+                                <a href="javascript:;" th:onclick="|like(this,1,${post.id},${post.userId},${post.id});|"
+                                   class="text-primary">
                                     <b th:text="${likeStatus==1?'已赞':'赞'}">赞</b> <i th:text="${likeCount}">11</i>
                                 </a>
                             </li>
@@ -154,7 +162,9 @@
                             <span>发布于 <b th:text="${#dates.format(cvo.comment.createTime, 'yyyy-MM-dd HH:mm:ss')}">2019-04-15 15:32:18</b></span>
                             <ul class="d-inline float-right">
                                 <li class="d-inline ml-2">
-                                    <a href="javascript:;" th:onclick="|like(this,2,${cvo.comment.id},${cvo.comment.userId},${post.id});|" class="text-primary">
+                                    <a href="javascript:;"
+                                       th:onclick="|like(this,2,${cvo.comment.id},${cvo.comment.userId},${post.id});|"
+                                       class="text-primary">
                                         <b th:text="${cvo.likeStatus==1?'已赞':'赞'}">赞</b> (<i th:text="${cvo.likeCount}">1</i>)
                                     </a>
                                 </li>
@@ -171,12 +181,15 @@
 
                             <li class="pb-3 pt-3 mb-3 border-bottom" th:each="rvo:${cvo.replies}">
                                 <div>
-										<span th:if="${rvo.target==null}" >
-											<a class="text-info"  th:text="${rvo.user.username}" th:href="@{|/user/profile/${rvo.user.id}|}">寒江雪</a>:&nbsp;&nbsp;
+										<span th:if="${rvo.target==null}">
+											<a class="text-info" th:text="${rvo.user.username}"
+                                               th:href="@{|/user/profile/${rvo.user.id}|}">寒江雪</a>:&nbsp;&nbsp;
 										</span>
                                     <span th:if="${rvo.target!=null}">
-											<a class="text-info" th:text="${rvo.user.username}" th:href="@{|/user/profile/${rvo.user.id}|}">Sissi</a> 回复
-											<a class="text-info" th:text="${rvo.target.username}" th:href="@{|/user/profile/${rvo.user.id}|}">寒江雪</a>:&nbsp;&nbsp;
+											<a class="text-info" th:text="${rvo.user.username}"
+                                               th:href="@{|/user/profile/${rvo.user.id}|}">Sissi</a> 回复
+											<a class="text-info" th:text="${rvo.target.username}"
+                                               th:href="@{|/user/profile/${rvo.user.id}|}">寒江雪</a>:&nbsp;&nbsp;
 										</span>
 
                                     <span th:utext="${rvo.reply.content}">这个是直播时间哈，觉得晚的话可以直接看之前的完整录播的~</span>
@@ -187,8 +200,11 @@
 										</span>
                                     <ul class="d-inline float-right">
                                         <li class="d-inline ml-2">
-                                            <a href="javascript:;" th:onclick="|like(this,2,${rvo.reply.id},${rvo.reply.userId},${post.id});|" class="text-primary">
-                                                <b th:text="${rvo.likeStatus==1?'已赞':'赞'}">赞</b> (<i th:text="${rvo.likeCount}">1</i>)
+                                            <a href="javascript:;"
+                                               th:onclick="|like(this,2,${rvo.reply.id},${rvo.reply.userId},${post.id});|"
+                                               class="text-primary">
+                                                <b th:text="${rvo.likeStatus==1?'已赞':'赞'}">赞</b> (<i
+                                                    th:text="${rvo.likeCount}">1</i>)
                                             </a>
                                         </li>
                                         <li class="d-inline ml-2">|</li>
@@ -199,7 +215,8 @@
                                     <div th:id="|huifu-${rvoStat.count}|" class="mt-4 collapse">
                                         <form method="post" th:action="@{|/comment/add/${post.id}|}">
                                             <div>
-                                                <input type="text" class="input-size" name="content" th:placeholder="|回复${rvo.user.username}|"/>
+                                                <input type="text" class="input-size" name="content"
+                                                       th:placeholder="|回复${rvo.user.username}|"/>
                                                 <input type="hidden" name="entityType" value="2">
                                                 <input type="hidden" name="entityId" th:value="${cvo.comment.id}">
                                                 <input type="hidden" name="targetId" th:value="${rvo.user.id}">
