--- a/src/main/resources/templates/site/notice.html
+++ b/src/main/resources/templates/site/notice.html
@@ -214,6 +214,6 @@
 <!--	<script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.5.1.min.js" crossorigin="anonymous"></script>-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
-	<script th:src="@{/js/global.js"}></script>
+	<script th:src="@{/js/global.js}"></script>
 </body>
 </html>
